[package]
name = "purr"
version = "0.1.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "Unoffical CLI for developing Catppuccin ports"
readme = "README.md"
homepage = "https://github.com/uncenter/purr"
repository = "https://github.com/uncenter/purr"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
catppuccin = "2.4.0"
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
convert_case = "0.6.0"
fancy-regex = "0.13.0"
flate2 = "1.0.30"
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
inquire = "0.7.5"
reqwest = { version = "0.11.27", features = ["blocking"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
tar = "0.4.40"
url = "2.5.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
