[package]
name = "catppuccin-purr"
version = "0.3.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "Unoffical CLI for developing Catppuccin ports"
readme = "README.md"
homepage = "https://github.com/uncenter/purr"
repository = "https://github.com/uncenter/purr"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "purr"
path = "src/main.rs"

[dependencies]
catppuccin = { version = "2.4.0", features = ["css-colors"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6.3"
convert_case = "0.6.0"
csscolorparser = { version = "0.6.2", features = ["rgb"] }
fancy-regex = "0.13.0"
flate2 = "1.0.30"
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
inquire = "0.7.5"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.27", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
strsim = "0.11.1"
strum = { version = "0.26.2", features = ["derive"] }
tar = "0.4.41"
url = "2.5.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
